force-app/main/default/objects/Region__c/fields/GoogleShortName__c.field-meta.xml
<CustomField>
    <fullName>GoogleShortName__c</fullName>
    <description>[Google Place API] Search an address with Google Place API returns sometimes ISO code or label for a region depending on the country (ex: China region sends &quot;Beijin Shi&quot; for the Short Name in &quot;administrative_area_level_1&quot; type)</description>
    <label>Google Short Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>