force-app/main/default/objects/Region__c/fields/International_code__c.field-meta.xml
<CustomField>
    <fullName>International_code__c</fullName>
    <description>format must be: country code ISO2 + &quot;-&quot; + regional code</description>
    <externalId>true</externalId>
    <label>International code</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>