force-app/main/default/objects/Region__c/fields/regional_code__c.field-meta.xml
<CustomField>
    <fullName>regional_code__c</fullName>
    <label>Regional code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>